--- a/src/projectpage.css
+++ b/src/projectpage.css
@@ -5,7 +5,7 @@
 .subheadings {
   font-size: 18pt;
   text-align: center;
-  padding: 10px;
+  padding: 30px;
   text-transform: uppercase;
 }
 
@@ -18,4 +18,11 @@ img {
   display: block;
   margin: auto;
   padding: 30px;
+}
+
+.display-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
